# models_recognizing_their_own_output

./: .gitignore  facts_claude-3.5-sonnet.json  facts_deepseek-chat.json  facts_gpt-4o.json  popular_pages.txt  pyproject.toml
benches/: analyze.ipynb  gen_facts.py  wiki.py
benches/logs/: 2024-07-05T18-21-37-07-00_task-openai_TRJPhbpdKS8c7stRXAeary.json  2024-07-05T18-36-01-07-00_task-openai_jeC29sZwnpJWgthAfttqKS.json  2024-07-05T18-54-08-07-00_task-openai_Z7wZp4i2U9htbqBuAEZeRA.json  2024-07-05T18-54-28-07-00_task-openai_X2u2eb4jetThd8qo2dnahb.json  2024-07-05T18-55-55-07-00_task-openai_muirVC5nhV4ZDgJmciqB3C.json  2024-07-05T19-00-21-07-00_task-openai_6pYX4p97SAwXze9dnpaqoK.json  2024-07-05T19-03-26-07-00_task-openai_NnmYw82zQhWp6HYpmw3pXE.json  2024-07-05T19-04-39-07-00_task-openai_Bv7qb8AkKihJDh9KP3HNHg.json  2024-07-06T21-33-16-07-00_task-opus-just-for-order-bias_grnc2CK2qtsKWzMJB6tMtr.json  2024-07-06T21-35-41-07-00_task-opus-just-for-order-bias_3giu2agnF9CWQvGd8dbBRe.json  2024-07-06T21-37-02-07-00_task-opus-just-for-order-bias_kNzp3NcobZ8JTAoAqoi8kS.json  2024-07-06T21-40-52-07-00_task-opus-just-for-order-bias_nSEn68ewfEVcWPwVJeRH9i.json
