[tool.poetry]
name = "benches"
version = "0.1.0"
description = ""
authors = ["Zygimantas Straznickas <hi@zygi.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
rich = "^13.7.1"
diskcache = "^5.6.3"
openai = "^1.35.10"
inspect_ai = { git = "https://github.com/UKGovernmentBEIS/inspect_ai.git" }
tenacity = "^8.5.0"
scipy = "^1.14.0"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
matplotlib = "^3.9.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
